# ENSF480Labs

./: README.md
Lab3/ExerciseA/: CMakeLists.txt  Circle.cpp  Circle.h  CurveCut.cpp  CurveCut.h  GraphicsWorld.cpp  GraphicsWorld.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main.cpp
Lab4/: ExerciseA.mdj
