cmake_minimum_required(VERSION 3.26)
project(ExerciseA)

set(CMAKE_CXX_STANDARD 17)

add_executable(ExerciseA main.cpp
        Point.cpp
        Point.h
        Shape.cpp
        Shape.h
        Shape.h
        Square.cpp
        Square.h
        Square.h
        Rectangle.cpp
        Rectangle.h
        GraphicsWorld.cpp
        GraphicsWorld.h)
